--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_crime">CrimeActivity</string>
     <string name="crime_title_hint">Enter a title for the crime.</string>
     <string name="action_settings">Settings</string>
+    <string name="crimes_title">Crimes</string>
 </resources>
