--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="crime_title_hint">Enter a title for the crime.</string>
     <string name="action_settings">Settings</string>
     <string name="crimes_title">Crimes</string>
+    <string name="crime_details_title">Details</string>
+    <string name="crime_fragment_title">Title</string>
+    <string name="crime_checkbox_solved">Solved?</string>
 </resources>
