--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="crime_details_title">Details</string>
     <string name="crime_fragment_title">Title</string>
     <string name="crime_checkbox_solved">Solved?</string>
+    <string name="crime_title_label">Title</string>
+    <string name="crime_details_label">Details</string>
+    <string name="crime_solved_label">Solved?</string>
 </resources>
