--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
   <string name="subtitle">Sometimes tolerance is not a virtue.</string>
   <string name="delete_crime">Delete Crime</string>
     <string name="action_settings">Settings</string>
+    <string name="time_picker_title">Time of crime:</string>
+    <string name="date">Date?</string>
+    <string name="time">Time?</string>
+    <string name="choose_date_time">Edit date or time?</string>
 
 </resources>
